# backtest_GUI

./: .gitignore  Lancer_Backtest_GUI.bat  Lancer_Backtest_GUI.vbs  README.md  pyproject.toml
configs/: default.yaml  user1.yaml  user2.yaml
src/bt_gui/: runner.py
src/bt_gui/config/: __init__.py  loader.py
src/bt_gui/core/: artifacts.py  backtest_runner.py  validators.py
src/bt_gui/gui/: __init__.py  config_view.py  history_view.py  main_window.py  results_view.py  run_view.py
src/ma_librairie/: __init__.py  runner.py
src/ma_librairie/app_logging/: __init__.py  logger.py
src/ma_librairie/config/: __init__.py  settings.py
src/ma_librairie/core/: __init__.py  artifacts.py  backtest_runner.py  validators.py
src/ma_librairie/gui/: app.py  config_view.py  history_view.py  main_window.py  results_view.py  run_view.py
