[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-gui"
version = "0.1.0"
description = "Interface desktop pour piloter des backtests internes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "plotly>=5.20",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "python-dateutil>=2.8",
    "tqdm>=4.66",
]

[project.scripts]
backtest-gui = "ma_librairie.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
